--- a/themes/yodeley/style.css
+++ b/themes/yodeley/style.css
@@ -7,7 +7,7 @@ Theme Name: Yodeley
 body {
   font-family: "Work Sans", sans-serif;
   font-weight: 300;
-  font-size: 366px;
+  font-size: 36px;
   background-image: url("https://www.toptal.com/designers/subtlepatterns/patterns/blackorchid.png");
   overflow-x: hidden; }
 
@@ -127,7 +127,7 @@ img {
   margin-bottom: 0;
   border-radius: 0;
   background: transparent;
-  color: #00f1e2;
+  color: #fff1e2;
   max-width: 100vw; }
 
 ul.navbar-nav {
@@ -151,7 +151,7 @@ ul.navbar-nav {
   pointer-events: none; }
 
 #brand-name {
-  color: #00f1e2;
+  color: #fff1e2;
   font-weight: 300; }
 
 #quem-somos {
@@ -199,7 +199,7 @@ ul.navbar-nav {
   #modaal.active {
     display: block; }
   #modaal .container {
-    background: #00f1e2;
+    background: #fff1e2;
     margin-top: 50px;
     margin-bottom: 50px;
     padding-top: 50px;
@@ -250,14 +250,14 @@ ul.navbar-nav {
     padding: 20px 50px; }
   .well h3 {
     font-weight: 300;
-    color: #00f1e2;
+    color: #fff1e2;
     margin-top: 0;
     margin-bottom: 0;
     font-size: 18px;
     line-height: 24px;
     padding: 0; }
   .well h6 {
-    color: #00f1e2;
+    color: #fff1e2;
     margin-top: 0;
     text-transform: uppercase; }
 
