--- a/themes/yodeley/style.css
+++ b/themes/yodeley/style.css
@@ -1,13 +1,11 @@
 /*
 Theme Name: Yodeley
 */
-@import url("https://fonts.googleapis.com/css?family=Miriam+Libre:400,700");
-@import url("https://fonts.googleapis.com/css?family=Work+Sans:300,500,700");
-@import url("https://fonts.googleapis.com/css?family=Halant:500,700");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,600,700");
 body {
-  font-family: "Work Sans", sans-serif;
+  font-family: "Open Sans", Helvetica, sans-serif;
   font-weight: 300;
-  font-size: 24px;
+  font-size: 17px;
   background-image: url("https://www.toptal.com/designers/subtlepatterns/patterns/blackorchid.png");
   overflow-x: hidden; }
 
@@ -87,6 +85,12 @@ h4 {
   h4 {
     line-height: 1.22222222;
     /* (22px / 18px */ } }
+h5 {
+  font-size: 1em;
+  line-height: 1.11111111;
+  text-transform: uppercase;
+  font-weight: 300; }
+
 blockquote {
   font-size: 1.25em;
   /* 20px / 16px */
@@ -104,9 +108,9 @@ textarea {
     line-height: 1.45833333;
     /* 35px / 24px */ } }
 h1, h2, h3, h4, h5, h6 {
-  font-weight: 700;
+  font-weight: 600;
   color: inherit;
-  font-family: "Work Sans", sans-serif; }
+  font-family: "Open Sans", sans-serif; }
 
 a:hover,
 a:focus,
@@ -158,6 +162,35 @@ ul.navbar-nav {
   padding: 30px;
   background: #101010;
   color: white; }
+
+#cats .row > div {
+  height: 50vh;
+  color: white;
+  background-color: #403d3a;
+  border: 1px solid #403d3a;
+  transition: 0.2s; }
+  #cats .row > div:hover {
+    background-color: #181818;
+    cursor: pointer; }
+    #cats .row > div:hover .bg-img {
+      opacity: 0.1; }
+#cats .bg-img {
+  height: 100%;
+  width: 100%;
+  opacity: 0.4;
+  background-size: cover;
+  transition: 0.2s; }
+#cats .meta {
+  width: 100%;
+  max-width: 400px;
+  padding: 30px; }
+  #cats .meta h2 {
+    font-size: 2.5em;
+    font-weight: 300;
+    text-transform: lowercase; }
+  #cats .meta p {
+    font-weight: 300;
+    opacity: 0.7; }
 
 #wrapper {
   overflow-x: hidden; }
