--- a/themes/yodeley/style.css
+++ b/themes/yodeley/style.css
@@ -5,7 +5,7 @@ Theme Name: Yodeley
 body {
   font-family: "Open Sans", Helvetica, sans-serif;
   font-weight: 300;
-  font-size: 17px;
+  font-size: 16px;
   background-image: url("/wp-content/themes/yodeley/img/bodyBg.png");
   overflow-x: hidden; }
 
@@ -125,6 +125,9 @@ a:focus,
 a:visited {
   color: inherit; }
 
+p {
+  line-height: 1.6em; }
+
 .absolute-center {
   position: absolute;
   top: 50%;
@@ -201,8 +204,12 @@ img {
 #cats .row > div {
   height: 50vh;
   color: white;
-  background-color: #403d3a;
-  border: 2px solid #181818;
+  background: #181818;
+  background: -moz-linear-gradient(45deg, #181818 0%, #2b2927 100%);
+  background: -webkit-linear-gradient(45deg, #181818 0%, #2b2927 100%);
+  background: linear-gradient(45deg, #181818 0%, #2b2927 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#181818', endColorstr='#2b2927',GradientType=1 );
+  border: 1px solid #181818;
   transition: 0.2s;
   position: relative; }
   #cats .row > div:hover {
@@ -252,18 +259,57 @@ img {
     text-transform: lowercase; }
   #cats .meta p {
     font-weight: 300;
-    opacity: 0.7; }
+    opacity: 1;
+    color: #fff1e2; }
 
 #produtora {
   text-align: center;
-  color: #fff1e2; }
-  #produtora h2 {
+  color: white;
+  padding-top: 20vh;
+  padding-bottom: 20vh; }
+  #produtora h1 {
     display: inline-block;
-    padding: 5px 15px;
-    margin-top: 100px;
     margin-bottom: 30px;
-    border: 2px solid #fff1e2;
-    text-transform: uppercase; }
+    text-transform: lowercase; }
+
+.item-home {
+  height: 250px;
+  margin-bottom: 50px;
+  color: white;
+  background: #181818;
+  background: -moz-linear-gradient(45deg, #181818 0%, #2b2927 100%);
+  background: -webkit-linear-gradient(45deg, #181818 0%, #2b2927 100%);
+  background: linear-gradient(45deg, #181818 0%, #2b2927 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#181818', endColorstr='#2b2927',GradientType=1 ); }
+  .item-home .bg {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-position: center;
+    background-size: cover;
+    opacity: 0.3; }
+  .item-home .meta {
+    z-index: 999; }
+  .item-home h3 {
+    margin-top: 0; }
+  .item-home h6 {
+    margin-bottom: 5px; }
+
+#equipe {
+  background-color: #fff1e2;
+  padding-top: 20vh;
+  padding-bottom: 20vh; }
+  #equipe h1 {
+    display: inline-block;
+    margin-bottom: 30px;
+    text-transform: lowercase; }
+  #equipe h3 {
+    margin-top: 0; }
+  #equipe img {
+    margin-right: 20px;
+    margin-bottom: 8px; }
 
 #wrapper {
   overflow-x: hidden; }
