--- a/themes/yodeley/style.scss
+++ b/themes/yodeley/style.scss
@@ -17,7 +17,7 @@ $font-face: 'Open Sans';
 body {
 	font-family: $font-face, Helvetica, sans-serif;
 	font-weight: 300;
-	font-size: 17px;
+	font-size: 16px;
   background-image: url("/wp-content/themes/yodeley/img/bodyBg.png");
   overflow-x: hidden;
 }
@@ -183,6 +183,10 @@ a:visited {
 	color: inherit;
 }
 
+p {
+  line-height: 1.6em
+}
+
 .absolute-center {
 	position: absolute;
 	top: 50%;
@@ -279,8 +283,12 @@ img {
   .row > div {
     height: 50vh;
     color: white;
-    background-color: $brown;
-    border: 2px solid $black;
+    background: rgb(24,24,24);
+    background: -moz-linear-gradient(45deg, rgba(24,24,24,1) 0%, rgba(43,41,39,1) 100%);
+    background: -webkit-linear-gradient(45deg, rgba(24,24,24,1) 0%,rgba(43,41,39,1) 100%);
+    background: linear-gradient(45deg, rgba(24,24,24,1) 0%,rgba(43,41,39,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#181818', endColorstr='#2b2927',GradientType=1 );
+    border: 1px solid $black;
     transition: 0.2s;
     position: relative;
     &:hover {
@@ -342,22 +350,69 @@ img {
     }
     & p {
       font-weight: 300;
-      opacity: 0.7
+      opacity: 1;
+      color: $white
     }
   }
 }
 
 #produtora {
   text-align: center;
-  color: $white;
-  h2 {
+  color: white;
+  padding-top: 20vh;
+  padding-bottom: 20vh;
+  h1 {
     display: inline-block;
-    padding: 5px 15px;
-    margin-top: 100px;
     margin-bottom: 30px;
-    border: 2px solid $white;
-    text-transform: uppercase;
+    text-transform: lowercase;
 
+  }
+}
+
+.item-home {
+  height: 250px;
+  margin-bottom: 50px;
+  color: white;
+  background: rgb(24,24,24);
+  background: -moz-linear-gradient(45deg, rgba(24,24,24,1) 0%, rgba(43,41,39,1) 100%);
+  background: -webkit-linear-gradient(45deg, rgba(24,24,24,1) 0%,rgba(43,41,39,1) 100%);
+  background: linear-gradient(45deg, rgba(24,24,24,1) 0%,rgba(43,41,39,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#181818', endColorstr='#2b2927',GradientType=1 );
+
+  .bg {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-position: center;
+    background-size: cover;
+    opacity: 0.3;
+  }
+  .meta { z-index: 999}
+  h3 {
+    margin-top: 0;
+  }
+  h6  {
+    margin-bottom: 5px;
+  }
+}
+
+#equipe {
+  background-color: $white;
+  padding-top: 20vh;
+  padding-bottom: 20vh;
+  h1 {
+    display: inline-block;
+    margin-bottom: 30px;
+    text-transform: lowercase;
+  }
+  h3 {
+    margin-top: 0
+  }
+  img {
+    margin-right: 20px;
+    margin-bottom: 8px;
   }
 }
 
