--- a/themes/yodeley/views/home.html
+++ b/themes/yodeley/views/home.html
@@ -1,22 +1,11 @@
 <div id="wrapper">	
 	
-	<home-content></home-content>
+	<cat-grid></cat-grid>
 
-	<div class="container-fluid">
-		<div class="row">
-			<div id="produtora" class="col-sm-8 col-sm-offset-2 col-lg-6 col-lg-offset-3">
-				<h2>A produtora</h2>
-				<p class="lead">A Yodeley aparece no variado e complicado mercado audiovisual com a intenção de diversificar e atender as mais diversas demandas de seus clientes.</p>
-				<p>Para isso, pretendemos diversificar a abordagem com uma diretoria especializada nos processos audiovisuais assim como na administração e condução da empresa e de diferentes projetos pessoais e encomendados.</p>
-			</div>
-		</div>
-	</div>
+	<page-produtora></page-produtora>
+	
+	<page-equipe></page-equipe>
 
-	<div class="container-fluid" style="padding-top: 50px;">
-
-		<div class="row itemrow">
-			<item-home></item-home>
-		</div>
-		
-	</div>
+	<item-home></item-home>
+	
 </div>
