implementaçoes de layout

--- a/themes/yodeley/style.css
+++ b/themes/yodeley/style.css
@@ -2,6 +2,7 @@
 Theme Name: Yodeley
 */
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:300,600,700");
+@import url("https://fonts.googleapis.com/css?family=Oswald:300,500,600");
 body {
   font-family: "Open Sans", Helvetica, sans-serif;
   font-weight: 300;
@@ -115,9 +116,9 @@ li {
   list-style: none; }
 
 h1, h2, h3, h4, h5, h6 {
-  font-weight: 600;
+  font-weight: 500;
   color: inherit;
-  font-family: "Open Sans", sans-serif; }
+  font-family: "Oswald", sans-serif; }
 
 a,
 a:hover,
@@ -215,6 +216,10 @@ img {
   #cats .row > div:hover {
     background-color: #181818;
     cursor: pointer; }
+    #cats .row > div:hover .meta p {
+      display: block; }
+    #cats .row > div:hover .meta h2 {
+      color: #f8ba72; }
     #cats .row > div:hover .bg-img {
       opacity: 0.1; }
 #cats .bg-img {
@@ -252,15 +257,20 @@ img {
 #cats .meta {
   width: 100%;
   max-width: 400px;
-  padding: 30px; }
+  padding: 30px;
+  text-align: center; }
   #cats .meta h2 {
     margin-top: 0;
-    font-size: 2em;
-    text-transform: lowercase; }
+    font-size: 3em;
+    font-weight: 300;
+    color: #fff1e2;
+    text-transform: lowercase;
+    transition: 0.5s; }
   #cats .meta p {
     font-weight: 300;
     opacity: 1;
-    color: #fff1e2; }
+    color: #fff1e2;
+    display: none; }
 
 #produtora {
   text-align: center;
@@ -274,7 +284,6 @@ img {
 
 .item-home {
   height: 250px;
-  margin-bottom: 50px;
   color: white;
   background: #181818;
   background: -moz-linear-gradient(45deg, #181818 0%, #2b2927 100%);
@@ -293,9 +302,15 @@ img {
   .item-home .meta {
     z-index: 999; }
   .item-home h3 {
-    margin-top: 0; }
+    margin-top: 0;
+    font-family: "Open Sans";
+    font-weight: 600; }
   .item-home h6 {
-    margin-bottom: 5px; }
+    margin-bottom: 5px;
+    color: #f8ba72;
+    text-transform: lowercase;
+    font-size: 1.5em;
+    font-weight: 300; }
 
 #equipe {
   background-color: #fff1e2;
@@ -308,8 +323,6 @@ img {
     display: inline-block;
     margin-bottom: 30px;
     text-transform: lowercase; }
-  #equipe h3 {
-    font-size: 1.2em; }
   #equipe img {
     margin-right: 20px;
     margin-bottom: 8px; }
