--- a/themes/yodeley/style.css
+++ b/themes/yodeley/style.css
@@ -129,6 +129,12 @@ a:visited {
 p {
   line-height: 1.6em; }
 
+.spacer {
+  clear: both;
+  width: 100%;
+  height: 60px;
+  display: block; }
+
 .absolute-center {
   position: absolute;
   top: 50%;
@@ -227,7 +233,7 @@ img {
   position: absolute;
   height: 50%;
   width: 50%;
-  opacity: 0.3;
+  opacity: 0.2;
   background-size: cover;
   background-position: center;
   transition: 0.2s; }
@@ -257,7 +263,7 @@ img {
         display: none; } }
 #cats .meta {
   width: 100%;
-  max-width: 400px;
+  max-width: 360px;
   padding: 30px;
   text-align: center; }
   #cats .meta h2 {
@@ -347,15 +353,20 @@ img {
       display: block; }
   #equipe h1 {
     display: inline-block;
-    margin-bottom: 60px;
+    margin-top: 0;
+    margin-bottom: 30px;
     text-transform: lowercase;
     color: #bc475c; }
   #equipe h3 {
-    color: #181818; }
+    color: #181818;
+    font-family: "Open Sans";
+    font-weight: 800;
+    font-size: 1.2em; }
   #equipe img {
     margin-right: 20px;
     margin-bottom: 8px;
-    border-radius: 100%; }
+    border-radius: 100%;
+    width: 200px; }
 
 #wrapper {
   overflow-x: hidden; }
