--- a/themes/yodeley/style.scss
+++ b/themes/yodeley/style.scss
@@ -303,7 +303,7 @@ img {
     transition: 0.2s;
     position: relative;
     &:hover {
-      background-color: $black;
+      background: $black;
       cursor: pointer;
       .meta p {
         display: block;
