--- a/themes/yodeley/style.css
+++ b/themes/yodeley/style.css
@@ -6,7 +6,7 @@ Theme Name: Yodeley
 body {
   font-family: "Open Sans", Helvetica, sans-serif;
   font-weight: 300;
-  font-size: 16px;
+  font-size: 18px;
   background-image: url("/wp-content/themes/yodeley/img/bodyBg.png");
   overflow-x: hidden; }
 
@@ -39,7 +39,7 @@ h1 {
     font-size: 3em;
     /* 2.5x body copy size = 40px */
     line-height: 1.125; } }
-@media (min-width: 1080px) {
+@media (min-width: 1200px) {
   h1 {
     font-size: 4em;
     /* 3x body copy size = 48px */
@@ -56,7 +56,7 @@ h2 {
     font-size: 2em;
     /* 2x body copy size = 32px */
     line-height: 1.25; } }
-@media (min-width: 1080px) {
+@media (min-width: 1200px) {
   h2 {
     font-size: 2.25em;
     /* 2.25x body copy size = 36px */
@@ -72,7 +72,7 @@ h3 {
     font-size: 1.5em;
     /* 1.5x body copy size = 24px */
     line-height: 1.25; } }
-@media (min-width: 1080px) {
+@media (min-width: 1200px) {
   h3 {
     font-size: 1.75em;
     /* 1.75x body copy size = 28px */
@@ -268,7 +268,7 @@ img {
   text-align: center; }
   #cats .meta h2 {
     margin-top: 0;
-    font-size: 3em;
+    font-size: 4em;
     font-weight: 300;
     color: #fff1e2;
     text-transform: lowercase;
@@ -293,6 +293,7 @@ img {
 .item-home {
   height: 250px;
   color: white;
+  border: 1px solid #181818;
   background: #181818;
   background: -moz-linear-gradient(45deg, #181818 0%, #2b2927 100%);
   background: -webkit-linear-gradient(45deg, #181818 0%, #2b2927 100%);
