--- a/themes/yodeley/style.scss
+++ b/themes/yodeley/style.scss
@@ -20,7 +20,7 @@ $font-face2: 'Oswald';
 body {
 	font-family: $font-face, Helvetica, sans-serif;
 	font-weight: 300;
-	font-size: 18px;
+	font-size: 16px;
   background-image: url("/wp-content/themes/yodeley/img/bodyBg.png");
   overflow-x: hidden;
 }
@@ -317,44 +317,16 @@ img {
     }
   }
   .bg-img {
+    top: 0;
+    left: 0;
     position: absolute;
-    height: 50%;
-    width: 50%;
+    height: 100%;
+    width: 100%;
     opacity: 0.2;
     background-size: cover;
     background-position: center;
     transition: 0.2s;
-    &:nth-child(1) {
-      top: 0;
-      left: 0;
-      @media all and (max-width: 1280px) and (min-width: 768px) {
-        width: 100%;
-      }
-      
-    }
-    &:nth-child(2) {
-      top: 0;
-      right: 0;
-      @media all and (max-width: 1280px) and (min-width: 768px) {
-        display: none;
-      }
-      
-    }
-    &:nth-child(3) {
-      bottom: 0;
-      left: 0;
-      @media all and (max-width: 1280px) and (min-width: 768px) {
-        width: 100%;
-      }
-    }
-    &:nth-child(4) {
-      bottom: 0;
-      right: 0;
-      @media all and (max-width: 1280px) and (min-width: 768px) {
-        display: none;
-      }
-      
-    }
+
   }
   .meta {
     width: 100%;
@@ -367,7 +339,7 @@ img {
       font-weight: 300;
       color: $white;
       text-transform: lowercase;
-      transition: 0.5s;
+      transition: 0.2s;
     }
     & p {
       font-weight: 300;
@@ -434,7 +406,7 @@ img {
     background: transparent;
     border-color: transparent;
     box-shadow: none;
-    margin-bottom: 0;
+    margin-bottom: 20px;
   }
   small p {
     background: $red;
@@ -447,14 +419,6 @@ img {
     width: 300px;
     z-index: 99999;
     display: none;
-    &::before {
-      content: "\f0d8";
-      position: absolute;
-      top: 0;
-      left: 0;
-      color: $blue;
-      z-index: 99999;
-    }
   }
 
   .trigger{
@@ -481,6 +445,10 @@ img {
     margin-bottom: 8px;
     border-radius: 100%;
     width: 200px;
+    transition: 0.1s;
+    &:hover {
+      border: 3px solid $red;
+    }
   }
 }
 
