--- a/themes/yodeley/views/home.html
+++ b/themes/yodeley/views/home.html
@@ -2,6 +2,8 @@
 	
 	<cat-grid></cat-grid>
 
+	<yodeley-navbar></yodeley-navbar>
+
 	<page-produtora></page-produtora>
 	
 	<page-equipe></page-equipe>
