remove youtuconvert navbar to directive and change its position

--- a/themes/yodeley/views/single.html
+++ b/themes/yodeley/views/single.html
@@ -1,10 +1,12 @@
-<yodeley-navbar></yodeley-navbar>
+<yodeley-navbar  ng-if="theRoute[0].slug != 'home'"></yodeley-navbar>
 
 <div id="wrapper">
 
 	<div ng-if="theRoute[0].slug == 'home'">
 	
 		<cat-grid></cat-grid>
+
+		<yodeley-navbar></yodeley-navbar>
 
 		<page-produtora></page-produtora>
 
