--- a/themes/yodeley/style.css
+++ b/themes/yodeley/style.css
@@ -141,22 +141,41 @@ p {
   left: 50%;
   transform: translate(-50%, -50%); }
 
+.stuck {
+  position: fixed !important;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: rgba(0, 0, 0, 0.8) !important;
+  z-index: 10000; }
+
 img {
   max-width: 100% !important;
   height: auto; }
+
+.navHide {
+  margin-top: -110px !important; }
+
+.navShow {
+  margin-top: 15px !important; }
 
 .navbar.navbar-inverse {
   margin-bottom: 0;
   border-radius: 0;
   background: transparent;
   color: #fff1e2;
-  max-width: 100vw;
-  border: none; }
+  border-radius: 10px;
+  background: rgba(0, 0, 0, 0.1);
+  margin: 15px auto;
+  width: 350px;
+  border: none;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 0); }
 
 .navbar-inverse ul.navbar-nav {
   float: none;
-  text-align: center;
-  margin-bottom: 15px; }
+  text-align: center; }
   .navbar-inverse ul.navbar-nav li {
     float: none;
     display: inline-block; }
@@ -178,7 +197,7 @@ img {
   opacity: 0.25; }
 
 #brand {
-  padding: 60px 30px 0;
+  padding: 60px 30px 60px;
   width: 400px; }
 
 #upperHeader {
