--- a/themes/yodeley/style.scss
+++ b/themes/yodeley/style.scss
@@ -204,6 +204,15 @@ p {
 	transform: translate(-50%, -50%);
 }
 
+.stuck {
+  position:fixed !important;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: rgba(0,0,0,0.8) !important;
+  z-index: 10000;
+}
+
 img {
 	max-width: 100%!important;
 	height: auto;
@@ -212,19 +221,31 @@ img {
 
 // NAV
 
+.navHide {
+  margin-top: -110px!important;
+}
+.navShow {
+  margin-top: 15px!important;
+}
+
 .navbar.navbar-inverse {
 	margin-bottom: 0;
 	border-radius: 0;
   background: transparent;
   color: $white;
-  max-width: 100vw;
+  border-radius: 10px;
+  background: rgba(0,0,0,0.1);
+  margin: 15px auto;
+  width: 350px;
   border: none;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 0);
 }
 
 .navbar-inverse ul.navbar-nav {
-	float: none;
+  float: none;
   text-align: center;
-  margin-bottom: 15px;
 	li {
 	    float: none;
 	    display: inline-block;
@@ -251,7 +272,7 @@ img {
 }
 
 #brand {
-  padding: 60px 30px 0;
+  padding: 60px 30px 60px;
   width: 400px;
 }
 
