--- a/themes/yodeley/views/category.html
+++ b/themes/yodeley/views/category.html
@@ -1,6 +1,6 @@
 <div id="wrapper">
 
-	<div class="container" style="padding-top: 50px;">
+	<div class="container">
 
 		<div class="row itemrow">
 			<item></item>
