remove padding top from cat page

--- a/themes/yodeley/views/single.html
+++ b/themes/yodeley/views/single.html
@@ -12,7 +12,7 @@
 		
 	</div>
 
-	<div class="container" style="padding-top: 50px;" ng-if="theRoute[0].slug != 'home'">
+	<div class="container" ng-if="theRoute[0].slug != 'home'">
 		<div class="row itemrow">
 			<item></item>
 		</div>
