--- a/themes/yodeley/style.scss
+++ b/themes/yodeley/style.scss
@@ -226,6 +226,10 @@ img {
 nav {
   transition: 0.2s ease-in;
 }
+.navbar-inverse {
+  background-color: $red;
+  ul.navbar-nav li>a { color: white; font-weight: 600; text-transform: lowercase; } 
+}
 .nav-up {
   top: -40px; // same as header height. use variables in LESS/SASS
 }
@@ -281,7 +285,7 @@ nav {
 }
 
 #brand {
-  padding: 60px 30px 60px;
+  padding: 30px;
   width: 400px;
 }
 
