--- a/themes/yodeley/style.css
+++ b/themes/yodeley/style.css
@@ -157,12 +157,9 @@ img {
 nav {
   transition: 0.2s ease-in; }
 
-.navbar-inverse {
-  background-color: #bc475c; }
-  .navbar-inverse ul.navbar-nav li > a {
-    color: white;
-    font-weight: 600;
-    text-transform: lowercase; }
+ul.navbar-nav li > a {
+  font-weight: 600;
+  text-transform: lowercase; }
 
 .nav-up {
   top: -40px; }
